--- a/RecyclerViewAlumnos/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewAlumnos/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.118" />
+        app:layout_constraintVertical_bias="0.118" >
+
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarAlumnoList"
